syntax = "proto3";

package messaging;

message Message {
  string id = 1;
  string sender = 2;
  string recipient = 3;
  string text = 4;
}

service MessagingService {
  rpc SendMessage(Message) returns (Message);
  rpc GetMessagesForUser(GetMessagesRequest) returns (stream Message);
}

message GetMessagesRequest {
  string username = 1;
}
